# framework

./: .clang-format  .clang-tidy  .codechecker.json  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  framework.kdev4  readme.md  system.conf  test.cpp  vcpkg-configuration.json  vcpkg.json
cockpit/: .gitignore  CMakeLists.txt  build.js  manifest.json  package.json  tsconfig.json
cockpit/IPC/: .eslintrc.json  .gitignore  CMakeLists.txt  manifest.json  package.json  tsconfig.json
cockpit/IPC/install/: create_link.js
cockpit/IPC/public/: index.html
cockpit/IPC/src/: App.css  App.tsx  Home.tsx  Types.tsx  index.tsx  variables.js.in
cockpit/install/: create_link.js
cockpit/src/: App.css  App.tsx  Types.tsx  index.html  index.tsx
cockpit/src/views/: Configurator.css  Configurator.tsx  Connections.tsx  IODebug.css  IODebug.tsx  ListDBUS.tsx  NotFoundPage.tsx  StateMachine.css  StateMachine.tsx  demoData.tsx
docs/: CMakeLists.txt  Doxyfile.in  conf.py  doxygen.rst  index.rst  manifest.json  requirements.txt
docs/coredumps/: info_learned.md
docs/design/: build_infra.md  cm.md  high_level_api.md  ipc.md  mqtt_broadcaster.md  overview.md  snitch.md
docs/functionality/: fish_species_encoding.md  ipc_tinker.md  logger.md  motors.md
docs/funtionality/: ipc_manager.md
docs/getting_started/: arch-linux.md  remote-dev-dbus.md  windows.md
docs/promo-slides/: conf.py  index.rst
exes/button/: CMakeLists.txt
exes/button/src/: main.cpp
exes/confman/: CMakeLists.txt
exes/confman/src/: main.cpp
exes/confman/systemd/: confman.service
exes/ec/: CMakeLists.txt
exes/ec/src/: main.cpp
exes/ec/systemd/: ethercat.service
exes/ec/tests/: CMakeLists.txt  test_ec_402.cpp  test_ec_util.cpp
exes/ethercat/: CMakeLists.txt
exes/ethercat/src/: base.cpp  common.cpp  interfaces.cpp  main.cpp
exes/ethercat/systemd/: ethercat.service  ethercat@.service
exes/ethercat/tests/: CMakeLists.txt  test_ec_402.cpp  test_ec_util.cpp
exes/gpio/: CMakeLists.txt
exes/gpio/inc/: gpio.hpp
exes/gpio/src/: gpio.cpp  main.cpp
exes/gpiod/: CMakeLists.txt
exes/gpiod/inc/: gpio.h
exes/gpiod/src/: gpio.cpp  main.cpp
exes/ipc-ruler/: CMakeLists.txt
exes/ipc-ruler/src/: ipc-ruler.cpp
exes/ipc-ruler/systemd/: ipc-ruler.service
exes/mqtt-bridge/: CMakeLists.txt
exes/mqtt-bridge/inc/: client.hpp  constants.hpp  endpoint.hpp  external_to_tfc.hpp  global_header.hpp  run.hpp  signal_names.hpp  spark_plug_interface.hpp  structs.hpp  tfc_to_external.hpp
exes/mqtt-bridge/src/: client.cpp  external_to_tfc.cpp  global_header.cpp  main.cpp  signal_names.cpp  spark_plug_interface.cpp  tfc_to_external.cpp
exes/mqtt-bridge/tests/: CMakeLists.txt
exes/mqtt-broadcaster/: CMakeLists.txt
exes/mqtt-broadcaster/inc/: .swp  broadcaster.hpp  config.hpp  error_codes.hpp  mqtt_broadcaster.hpp  mqtt_client.hpp  paho.hpp  paho2.hpp
exes/mqtt-broadcaster/src/: backup.cpp  example.cpp  main.cpp  minimum_example.cpp  paho.cpp  paho2.cpp  sample.cpp  test.cpp
exes/mqtt-broadcaster/tests/: CMakeLists.txt  mock_client.hpp  mqtt_broadcaster_tests.cpp  unit_tests.cpp
exes/operation-mode/: CMakeLists.txt
exes/operation-mode/inc/: app_operation_mode.hpp  operation_mode.hpp  state_machine.hpp
exes/operation-mode/src/: app_operation_mode.cpp  main.cpp  state_machine.cpp
exes/operation-mode/tests/: CMakeLists.txt  operation_mode_integration_test.cpp
exes/operations/: CMakeLists.txt
exes/operations/inc/: app_operation_mode.hpp  state_machine.hpp  state_machine_owner.hpp
exes/operations/src/: main.cpp  state_machine.cpp  state_machine_owner.cpp
exes/operations/tests/: operation_mode_integration_test.cpp  operations_state_machine_owner_test.cpp  operations_state_machine_test.cpp
exes/python/: CMakeLists.txt  main.cpp  module_logger.hpp
exes/sensor-control/: CMakeLists.txt
exes/sensor-control/inc/: api.hpp  behaviour.hpp  sensor_control.hpp  sensor_control_impl.hpp  state_machine.hpp
exes/sensor-control/src/: main.cpp  sensor_control.cpp
exes/sensor-control/tests/: CMakeLists.txt  sensor_control_integration_test.cpp  sensor_control_test.cpp  state_machine_test.cpp  state_machine_tests.cpp
exes/signal_source/: CMakeLists.txt
exes/signal_source/src/: main.cpp
exes/sparkplug_sub/: CMakeLists.txt
exes/sparkplug_sub/src/: sparkplug_sub.cpp
exes/tfc-mqtt-bridge/: CMakeLists.txt
exes/tfc-mqtt-bridge/inc/: impl.hpp  mqtt_broadcaster.hpp  paho2.hpp
exes/tfc-mqtt-bridge/src/: main.cpp  paho2.cpp
exes/tfcctl/: CMakeLists.txt
exes/tfcctl/src/: tfcctl.cpp
exes/themis/: CMakeLists.txt
exes/themis/inc/: alarm_database.hpp  dbus_interface.hpp
exes/themis/src/: main.cpp
exes/themis/tests/: CMakeLists.txt  themis_database_test.cpp  themis_integration_test.cpp
exes/tmon/: CMakeLists.txt
exes/tmon/inc/: state_machine_owner.hpp
exes/tmon/src/: app_operation_mode.cpp  main.cpp
exes/track-control/: CMakeLists.txt
exes/tracker/: CMakeLists.txt  readme.md
exes/tracker/inc/: action.h  (+4 more)
exes/ttui/: CMakeLists.txt
exes/tui/: .gitignore  CMakeLists.txt  tui.cpp
exes/ws-bridge/: CMakeLists.txt
libs/: CMakeLists.txt  tfcConfig.cmake.in
libs/configure_options/: .gitignore  CMakeLists.txt  configure_options.hpp.in  dbus-tfc.conf.in
libs/confman/: CMakeLists.txt
libs/dbus_util/: CMakeLists.txt
libs/dbus_utils/: CMakeLists.txt
libs/ec/: CMakeLists.txt
libs/ipc/: CMakeLists.txt
libs/ipc_connector/: CMakeLists.txt
libs/logger/: CMakeLists.txt
libs/mock/: CMakeLists.txt
libs/module_interfaces/: CMakeLists.txt  README.md  argparse.cxx  asio-gmf.h  asio.cxx  fmt.cxx  sdbusplus.cxx  spdlog.cxx
libs/motor/: CMakeLists.txt
libs/mqtt-sparkplug/: .gitignore  CMakeLists.txt
libs/operation_mode/: CMakeLists.txt
libs/progbase/: CMakeLists.txt  progbase.cxx
libs/rpc/: CMakeLists.txt
libs/sml/: CMakeLists.txt
libs/snitch/: CMakeLists.txt  snitch.hpp
libs/soem_interface/: CMakeLists.txt
libs/std/: CMakeLists.txt  std.cxx
libs/stx/: CMakeLists.txt
libs/systemctl/: CMakeLists.txt
libs/testing/: CMakeLists.txt
(+741 files in other folders)
